data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_640.wast
;; 1. **Test `br_if` with Simple True Condition:**    - A conditional branch `br_if` with a simple condition that evaluates to true. Check if the branch is taken correctly in both implementations.     - Constraint Checked: Correct evaluation of the true condition in `br_if`.    - Relation: Ensures `br_if` branches correctly when condition is true.

(assert_invalid
  (module (func $test-br_if-true-condition
    (block (result i32)
      (br_if 0 (i32.const 1)) (i32.const 0)
    )
  ))
  "type mismatch"
)